<resources>
    <string name="app_name">Viagens</string>
    <string name="banner_inicial">Banner Inicial</string>
    <string name="item_banner_inicial">Banner Inicial</string>
    <string name="text_banner_especial">Especiais</string>
    <string name="text_banner_brasil">Brasil</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvxzçABCDEFGHIJKLMNOPQRSTUVXZÇ </string>
    <string name="frase_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento.</string>
    <string name="texto_valor_compra">Valor da compra:</string>
    <string name="texthintnumerocartao">Número do cartão</string>
    <string name="texthintmes">MM</string>
    <string name="texthintano">AA</string>
    <string name="texthintnomecartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="cvc">CVC</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso! =)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="cordefundo">cordefundo</string>
</resources>