<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textFrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/frase_pagamento"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textValorCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/texto_valor_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFrase" />

    <TextView
        android:id="@+id/textValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textValorCompra"
        app:layout_constraintTop_toBottomOf="@+id/textValorCompra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/editTextDigiteNumeroCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/texthintnumerocartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValor" />

    <EditText
        android:id="@+id/editTextMes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/texthintmes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCVC"
        app:layout_constraintStart_toStartOf="@+id/editTextDigiteNumeroCartao" />

    <EditText
        android:id="@+id/editTextAno"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/texthintano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCVC"
        app:layout_constraintStart_toEndOf="@+id/editTextMes" />

    <EditText
        android:id="@+id/editTextCVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextDigiteNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/editTextDigiteNumeroCartao" />

    <EditText
        android:id="@+id/editTextNomeCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/texthintnomecartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextCVC"
        app:layout_constraintStart_toStartOf="@+id/editTextMes"
        app:layout_constraintTop_toBottomOf="@+id/editTextCVC" />

    <Button
        android:id="@+id/buttonFinalizarCompra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_pagamento"
        android:text="@string/finalizar_compra"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomeCartao"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeCartao"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCartao" />
</androidx.constraintlayout.widget.ConstraintLayout>