<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBannerInicial"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/purple_200"
        android:contentDescription="@string/banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewBannerInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_banner_especial"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBannerInicial"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBannerInicial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewBannerInicial"
        app:layout_constraintTop_toTopOf="@+id/imageViewBannerInicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewBannerInicial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_banner_brasil"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewBannerInicial"
        app:layout_constraintTop_toBottomOf="@+id/textViewBannerInicial" />

    <ListView
        android:id="@+id/listItemPacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBannerInicial"
        tools:listitem="@layout/item_pacote" />

</androidx.constraintlayout.widget.ConstraintLayout>