<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagePacoteResumo"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        android:src="@drawable/sao_paulo_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/textPacoteResumoLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePacoteResumo"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/textPacoteResumoDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textPacoteResumoLocal"
        app:layout_constraintTop_toBottomOf="@+id/textPacoteResumoLocal"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/textPacoteResumoData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textPacoteResumoPreco"
        app:layout_constraintStart_toStartOf="@+id/textPacoteResumoDias"
        app:layout_constraintTop_toBottomOf="@+id/textPacoteResumoDias"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/textPacoteResumoPreco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textPacoteResumoData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPacoteResumoData"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/textPacoteResumoPrecoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        app:layout_constraintBottom_toTopOf="@+id/textPacoteResumoPreco"
        app:layout_constraintEnd_toEndOf="@+id/textPacoteResumoPreco" />

    <Button
        android:id="@+id/buttonPacoteResumoFinalizarPgmento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_pagamento"
        android:text="@string/realizar_pagamento"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>